crates/ruff_python_parser/tests/snapshots/valid_syntax@match_after_py310.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/match_after_py310.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..80,
        body: Suite {
            range: 0..80,
            node_index: NodeIndex(None),
            statements: [
                Match(
                    StmtMatch {
                        node_index: NodeIndex(None),
                        range: 46..79,
                        subject: NumberLiteral(
                            ExprNumberLiteral {
                                node_index: NodeIndex(None),
                                range: 52..53,
                                value: Int(
                                    2,
                                ),
                            },
                        ),
                        cases: [
                            MatchCase {
                                range: 59..79,
                                node_index: NodeIndex(None),
                                pattern: MatchValue(
                                    PatternMatchValue {
                                        node_index: NodeIndex(None),
                                        range: 64..65,
                                        value: NumberLiteral(
                                            ExprNumberLiteral {
                                                node_index: NodeIndex(None),
                                                range: 64..65,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                    },
                                ),
                                guard: None,
                                body: Suite {
                                    range: 66..79,
                                    node_index: NodeIndex(None),
                                    statements: [
                                        Pass(
                                            StmtPass {
                                                node_index: NodeIndex(None),
                                                range: 75..79,
                                            },
                                        ),
                                    ],
                                },
                            },
                        ],
                    },
                ),
            ],
        },
    },
)
```
